--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Name - Personal Website</title>
+  <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="home">
+      <h2>Home</h2>
+      <p>Welcome to my personal website! This is the home section.</p>
+    </section>
+
+    <section id="about">
+      <h2>About Me</h2>
+      <p>A little bit about myself...</p>
+    </section>
+
+    <section id="portfolio">
+      <h2>Portfolio</h2>
+      <p>My projects and work samples...</p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Get in touch with me...</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2023 Your Name</p>
+  </footer>
+
+</body>
+</html>
