--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Personal Website</title>
+  <title>Tim Bode - Personal Website</title>
   <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
@@ -12,8 +12,7 @@
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#publications">Publications</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -21,17 +20,11 @@
 
   <main>
     <section id="home">
-      <h2>Home</h2>
-      <p>Welcome to my personal website! This is the home section. </p>
-      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      <h2>Welcome to my personal website!</h2>
+      <p>I am a <a href="https://www.fz-juelich.de/profile/bode_t">postdoc</a> at the <a href="https://www.fz-juelich.de/en/pgi/pgi-12">Institute for Quantum Computing Analytics</a> (PGI-12) at <a href="https://www.fz-juelich.de/en">Forschungszentrum Jülich</a>, where I am working on <a href="https://journals.aps.org/prxquantum/abstract/10.1103/PRXQuantum.4.030335">quantum algorithms</a> and <a href="https://arxiv.org/abs/2402.18953">quantum simulation</a>. I am also a contributor to the Julia packages <a href="https://github.com/FZJ-PGI-12/QAOA.jl">QAOA.jl</a> and <a href="https://github.com/NonequilibriumDynamics/KadanoffBaym.jl">KadanoffBaym.jl</a>. In 2021, I obtained my PhD in the group for <a href="https://www.pi.uni-bonn.de/kroha/en">condensed-matter and many-body theory</a> at the <a href="https://www.uni-bonn.de/en">University of Bonn</a>. Both my Master's and Bachelor's degrees are from <a href="https://ethz.ch/en.html">ETH Zurich</a>.</p>
     </section>
 
-    <section id="about">
-      <h2>About Me</h2>
-      <p>A little bit about myself...</p>
-    </section>
-
-    <section id="portfolio">
+    <section id="publications">
       <h2>Portfolio</h2>
       <p>My projects and work samples...</p>
     </section>
@@ -43,8 +36,9 @@
   </main>
 
   <footer>
-    <p>© 2023 Your Name</p>
+    <p>© 2025 Tim Bode</p>
   </footer>
 
+<script src="script.js"></script>
 </body>
 </html>
