add profile picture

--- a/index.html
+++ b/index.html
@@ -20,12 +20,19 @@
 
   <main>
     <section id="home">
-      <h2>Welcome to my personal website!</h2>
-      <p>I am a <a href="https://www.fz-juelich.de/profile/bode_t">postdoc</a> at the <a href="https://www.fz-juelich.de/en/pgi/pgi-12">Institute for Quantum Computing Analytics</a> (PGI-12) at <a href="https://www.fz-juelich.de/en">Forschungszentrum Jülich</a>, where I am working on <a href="https://journals.aps.org/prxquantum/abstract/10.1103/PRXQuantum.4.030335">quantum algorithms</a> and <a href="https://arxiv.org/abs/2402.18953">quantum simulation</a>. I am also a contributor to the Julia packages <a href="https://github.com/FZJ-PGI-12/QAOA.jl">QAOA.jl</a> and <a href="https://github.com/NonequilibriumDynamics/KadanoffBaym.jl">KadanoffBaym.jl</a>. In 2021, I obtained my PhD in the group for <a href="https://www.pi.uni-bonn.de/kroha/en">condensed-matter and many-body theory</a> at the <a href="https://www.uni-bonn.de/en">University of Bonn</a>. Both my Master's and Bachelor's degrees are from <a href="https://ethz.ch/en.html">ETH Zurich</a>.</p>
+      <div class="home-content">
+        <div class="profile-picture">
+          <img src="images/avatar.jpg" alt="Tim Bode">
+        </div>
+        <div class="home-text">
+          <h2>Welcome to my personal website!</h2>
+          <p>I am a <a href="https://www.fz-juelich.de/profile/bode_t">postdoc</a> at the <a href="https://www.fz-juelich.de/en/pgi/pgi-12">Institute for Quantum Computing Analytics</a> (PGI-12) at <a href="https://www.fz-juelich.de/en">Forschungszentrum Jülich</a>, where I am working on <a href="https://journals.aps.org/prxquantum/abstract/10.1103/PRXQuantum.4.030335">quantum algorithms</a> and <a href="https://arxiv.org/abs/2402.18953">quantum simulation</a>. I am also a contributor to the Julia packages <a href="https://github.com/FZJ-PGI-12/QAOA.jl">QAOA.jl</a> and <a href="https://github.com/NonequilibriumDynamics/KadanoffBaym.jl">KadanoffBaym.jl</a>. In 2021, I obtained my PhD in the group for <a href="https://www.pi.uni-bonn.de/kroha/en">condensed-matter and many-body theory</a> at the <a href="https://www.uni-bonn.de/en">University of Bonn</a>. Both my Master's and Bachelor's degrees are from <a href="https://ethz.ch/en.html">ETH Zurich</a>.</p>
+        </div>
+      </div>
     </section>
 
     <section id="publications">
-      <h2>Portfolio</h2>
+      <h2>Publications</h2>
       <p>My projects and work samples...</p>
     </section>
 
