add profile links

--- a/index.html
+++ b/index.html
@@ -19,10 +19,22 @@
   </header>
 
   <main>
+
     <section id="home">
       <div class="home-content">
         <div class="profile-picture">
           <img src="images/avatar.jpg" alt="Tim Bode">
+          <div class="profile-caption">
+            <a href="https://scholar.google.co.th/citations?user=8NLnrqAAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
+              <img src="images/Google_Scholar_logo.svg.png" alt="Google Scholar">
+            </a>
+            <a href="https://github.com/timbode" target="_blank" rel="noopener noreferrer">
+              <img src="images/github-mark.png" alt="GitHub">
+            </a>
+            <a href="https://www.linkedin.com/in/tim-bode-808b54149/" target="_blank" rel="noopener noreferrer">
+              <img src="images/In-Blue-128.png" alt="LinkedIn">
+            </a>
+          </div>
         </div>
         <div class="home-text">
           <h2>Welcome to my personal website!</h2>
