--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#publications">Publications</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -43,9 +44,14 @@
       </div>
     </section>
 
+    <section id="projects">
+      <h2>Projects</h2>
+      <p>My projects...</p>
+    </section>
+
     <section id="publications">
       <h2>Publications</h2>
-      <p>My projects and work samples...</p>
+      <p>My papers...</p>
     </section>
 
     <section id="contact">
