--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
     <section id="projects">
       <h2>Projects</h2>
-      <p>My projects...</p>
+      <h3>Quicopt - Helmholtz Field Study Fellowship</h3>
+      <p>We are part of the <a href="https://www.helmholtz.de/en/transfer/helmholtz-association-transfer-instruments/helmholtz-enterprise/">2024 Batch</a> of the <a href="https://www.helmholtz.de/transfer/innovations-und-foerderprogramme/helmholtz-enterprise/">Helmholtz Enterprise program</a>.</p>
+      <p>Quicopt is developing optimization software inspired by quantum physics to efficiently solve combinatorial optimization problems. This technology aims to help companies in various industries improve business decisions and reduce costs. The software addresses a key need for powerful solutions to complex optimization tasks.</p>
     </section>
 
     <section id="publications">
@@ -55,43 +57,43 @@
         <li>Thorge Müller, Ajainderpal Singh, Frank&nbsp;K. Wilhelm, and Tim Bode.
         <span class="bibtex-protected">Limitations of Quantum Approximate Optimization in Solving Generic Higher-Order Constraint-Satisfaction Problems</span>.
         2024.
-        URL: <a href="https://arxiv.org/abs/2411.19388">https://arxiv.org/abs/2411.19388</a>, <a href="https://arxiv.org/abs/2411.19388">arXiv:2411.19388</a>.</li>
+        <a href="https://arxiv.org/abs/2411.19388">arXiv:2411.19388</a>.</li>
         <li>Tim Bode, Krish Ramesh, and Tobias Stollenwerk.
         Quantum combinatorial optimization beyond the variational paradigm: simple schedules for hard problems.
         2024.
-        URL: <a href="https://arxiv.org/abs/2411.07646">https://arxiv.org/abs/2411.07646</a>, <a href="https://arxiv.org/abs/2411.07646">arXiv:2411.07646</a>.</li>
+        <a href="https://arxiv.org/abs/2411.07646">arXiv:2411.07646</a>.</li>
         <li>Tim Bode and Frank&nbsp;K. Wilhelm.
         Adiabatic bottlenecks in quantum annealing and nonequilibrium dynamics of paramagnons.
         <em>Phys. Rev. A</em>, 110:012611, Jul 2024.
-        URL: <a href="https://link.aps.org/doi/10.1103/PhysRevA.110.012611">https://link.aps.org/doi/10.1103/PhysRevA.110.012611</a>, <a href="https://doi.org/10.1103/PhysRevA.110.012611">doi:10.1103/PhysRevA.110.012611</a>.</li>
+        <a href="https://doi.org/10.1103/PhysRevA.110.012611">doi:10.1103/PhysRevA.110.012611</a>.</li>
         <li>Tim Bode, Michael Kajan, Francisco Meirinhos, and Johann Kroha.
         Non-markovian dynamics of open quantum systems via auxiliary particles with exact operator constraint.
         <em>Phys. Rev. Res.</em>, 6:013220, Feb 2024.
-        URL: <a href="https://link.aps.org/doi/10.1103/PhysRevResearch.6.013220">https://link.aps.org/doi/10.1103/PhysRevResearch.6.013220</a>, <a href="https://doi.org/10.1103/PhysRevResearch.6.013220">doi:10.1103/PhysRevResearch.6.013220</a>.</li>
+        <a href="https://doi.org/10.1103/PhysRevResearch.6.013220">doi:10.1103/PhysRevResearch.6.013220</a>.</li>
         <li>Kevin Lively, Tim Bode, Jochen Szangolies, Jian-Xin Zhu, and Benedikt Fauseweh.
         Noise robust detection of quantum phase transitions.
         <em>Phys. Rev. Res.</em>, 6:043254, Dec 2024.
-        URL: <a href="https://link.aps.org/doi/10.1103/PhysRevResearch.6.043254">https://link.aps.org/doi/10.1103/PhysRevResearch.6.043254</a>, <a href="https://doi.org/10.1103/PhysRevResearch.6.043254">doi:10.1103/PhysRevResearch.6.043254</a>.</li>
+        <a href="https://doi.org/10.1103/PhysRevResearch.6.043254">doi:10.1103/PhysRevResearch.6.043254</a>.</li>
         <li>Aditi Misra-Spieldenner, Tim Bode, Peter&nbsp;K. Schuhmacher, Tobias Stollenwerk, Dmitry Bagrets, and Frank&nbsp;K. Wilhelm.
         <span class="bibtex-protected">Mean-Field Approximate Optimization Algorithm</span>.
         <em>PRX Quantum</em>, 4:030335, Sep 2023.
-        URL: <a href="https://link.aps.org/doi/10.1103/PRXQuantum.4.030335">https://link.aps.org/doi/10.1103/PRXQuantum.4.030335</a>, <a href="https://doi.org/10.1103/PRXQuantum.4.030335">doi:10.1103/PRXQuantum.4.030335</a>.</li>
+        <a href="https://doi.org/10.1103/PRXQuantum.4.030335">doi:10.1103/PRXQuantum.4.030335</a>.</li>
         <li>Tim Bode, Dmitry Bagrets, Aditi Misra-Spieldenner, Tobias Stollenwerk, and Frank&nbsp;K. Wilhelm.
         <span class="bibtex-protected">QAOA.jl: Toolkit for the Quantum and Mean-Field Approximate Optimization Algorithms</span>.
         <em>Journal of Open Source Software</em>, 8(86):5364, 2023.
-        URL: <a href="https://doi.org/10.21105/joss.05364">https://doi.org/10.21105/joss.05364</a>, <a href="https://doi.org/10.21105/joss.05364">doi:10.21105/joss.05364</a>.</li>
+        <a href="https://doi.org/10.21105/joss.05364">doi:10.21105/joss.05364</a>.</li>
         <li>Francisco Meirinhos, Michael Kajan, Johann Kroha, and Tim Bode.
         <span class="bibtex-protected">Adaptive numerical solution of Kadanoff-Baym equations</span>.
         <em>SciPost Phys. Core</em>, 5:030, 2022.
-        URL: <a href="https://scipost.org/10.21468/SciPostPhysCore.5.2.030">https://scipost.org/10.21468/SciPostPhysCore.5.2.030</a>, <a href="https://doi.org/10.21468/SciPostPhysCore.5.2.030">doi:10.21468/SciPostPhysCore.5.2.030</a>.</li>
+        <a href="https://doi.org/10.21468/SciPostPhysCore.5.2.030">doi:10.21468/SciPostPhysCore.5.2.030</a>.</li>
         <li>Tim Bode.
         The two-particle irreducible effective action for classical stochastic processes.
         <em>Journal of Physics A: Mathematical and Theoretical</em>, 55(26):265401, jun 2022.
-        URL: <a href="https://dx.doi.org/10.1088/1751-8121/ac73c6">https://dx.doi.org/10.1088/1751-8121/ac73c6</a>, <a href="https://doi.org/10.1088/1751-8121/ac73c6">doi:10.1088/1751-8121/ac73c6</a>.</li>
+        <a href="https://doi.org/10.1088/1751-8121/ac73c6">doi:10.1088/1751-8121/ac73c6</a>.</li>
         <li>Fahri&nbsp;Emre Öztürk, Tim Lappe, Göran Hellmann, Julian Schmitt, Jan Klaers, Frank Vewinger, Johann Kroha, and Martin Weitz.
         <span class="bibtex-protected">Observation of a non-Hermitian phase transition in an optical quantum gas</span>.
         <em>Science</em>, 372(6537):88&ndash;91, 2021.
-        URL: <a href="https://www.science.org/doi/abs/10.1126/science.abe9869">https://www.science.org/doi/abs/10.1126/science.abe9869</a>, <a href="https://doi.org/10.1126/science.abe9869">doi:10.1126/science.abe9869</a>.</li>
+        <a href="https://doi.org/10.1126/science.abe9869">doi:10.1126/science.abe9869</a>.</li>
         <li><span class="bibtex-protected">Tim Lappe</span>.
         <em><span class="bibtex-protected">Non-Markovian Dynamics of Open Bose-Einstein Condensates</span></em>.
         PhD thesis, Rheinische Friedrich-Wilhelms-Universität Bonn, March 2021.
@@ -99,17 +101,28 @@
         <li>Fahri&nbsp;Emre Ozturk, Tim Lappe, Göran Hellmann, Julian Schmitt, Jan Klaers, Frank Vewinger, Johann Kroha, and Martin Weitz.
         <span class="bibtex-protected">Fluctuation dynamics of an open photon Bose-Einstein condensate</span>.
         <em>Phys. Rev. A</em>, 100:043803, Oct 2019.
-        URL: <a href="https://link.aps.org/doi/10.1103/PhysRevA.100.043803">https://link.aps.org/doi/10.1103/PhysRevA.100.043803</a>, <a href="https://doi.org/10.1103/PhysRevA.100.043803">doi:10.1103/PhysRevA.100.043803</a>.</li>
+        <a href="https://doi.org/10.1103/PhysRevA.100.043803">doi:10.1103/PhysRevA.100.043803</a>.</li>
         <li>Tim Lappe, Anna Posazhennikova, and Johann Kroha.
         <span class="bibtex-protected">Fluctuation damping of isolated, oscillating Bose-Einstein condensates</span>.
         <em>Phys. Rev. A</em>, 98:023626, Aug 2018.
-        URL: <a href="https://link.aps.org/doi/10.1103/PhysRevA.98.023626">https://link.aps.org/doi/10.1103/PhysRevA.98.023626</a>, <a href="https://doi.org/10.1103/PhysRevA.98.023626">doi:10.1103/PhysRevA.98.023626</a>.</li>
-        </ul>        
+        <a href="https://doi.org/10.1103/PhysRevA.98.023626">doi:10.1103/PhysRevA.98.023626</a>.</li>
+      </ul>      
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Get in touch with me...</p>
+      <p><a href="https://www.fz-juelich.de/profile/bode_t">Tim Bode @ PGI-12</a></p>
+      <div class="profile-caption">
+        <a href="https://scholar.google.co.th/citations?user=8NLnrqAAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
+          <img src="images/Google_Scholar_logo.svg.png" alt="Google Scholar">
+        </a>
+        <a href="https://github.com/timbode" target="_blank" rel="noopener noreferrer">
+          <img src="images/github-mark.png" alt="GitHub">
+        </a>
+        <a href="https://www.linkedin.com/in/tim-bode-808b54149/" target="_blank" rel="noopener noreferrer">
+          <img src="images/In-Blue-128.png" alt="LinkedIn">
+        </a>
+      </div>
     </section>
   </main>
 
