--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tim Bode - Personal Website</title>
-  <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <header>
     <nav>
-      <ul>
+      <button class="mobile-menu-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </button>
+      <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#publications">Publications</a></li>
+        <li><a href="#talks">Talks</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -44,70 +52,138 @@
       </div>
     </section>
 
+    <section id="highlighted-publications">
+      <div class="highlighted-publications">
+        <h2>Selected Publications</h2>
+        <ul>
+          <li>
+            <strong>Quantum combinatorial optimization beyond the variational paradigm: simple schedules for hard problems.</strong><br>
+            Phys. Rev. A, <strong>111</strong>, 032411 (2025).<br>
+            <a href="https://doi.org/10.1103/PhysRevA.111.032411">doi:10.1103/PhysRevA.111.032411</a>
+          </li>
+          <li>
+            <strong>Mean-Field Approximate Optimization Algorithm</strong><br>
+            PRX Quantum, <strong>4</strong>, 030335 (2023).<br>
+            <a href="https://doi.org/10.1103/PRXQuantum.4.030335">doi:10.1103/PRXQuantum.4.030335</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <section id="projects">
       <h2>Projects</h2>
       <h3>Quicopt - Helmholtz Field Study Fellowship</h3>
       <p>We are part of the <a href="https://www.helmholtz.de/en/transfer/helmholtz-association-transfer-instruments/helmholtz-enterprise/">2024 Batch</a> of the <a href="https://www.helmholtz.de/transfer/innovations-und-foerderprogramme/helmholtz-enterprise/">Helmholtz Enterprise program</a>.</p>
-      <p>Quicopt is developing optimization software inspired by quantum physics to efficiently solve combinatorial optimization problems. This technology aims to help companies in various industries improve business decisions and reduce costs. The software addresses a key need for powerful solutions to complex optimization tasks.</p>
+      <p>Quicopt is developing optimization software inspired by quantum physics to efficiently solve combinatorial optimization problems. This technology aims to help companies in various industries improve business decisions and reduce costs.</p>
+
+      <h3>Master's Thesis in Quantum Optimization</h3>
+      <p>
+        We are looking for a highly motivated student to work on one of a variety of research ideas revolving around the general topic of quantum optimization. The direct day-to-day supervision will be provided by me. Recent papers that have come forth out of Master's projects in our group are <a href="https://arxiv.org/abs/2411.19388">arxiv:2411.19388</a> and <a href="https://doi.org/10.1103/PhysRevA.111.032411">Phys. Rev. A <b>111</b>, 032411 (2025)</a>. PGI-12 is a lively and supportive institute with access to great infrastructure.
+    </p>
+
+    <h4>Possible research directions:</h4>
+    <ul>
+        <li>Algorithm development for quantum continuous optimization.</li>
+        <li>Algorithm development for low-autocorrelation binary sequences.</li>
+        <li>Algorithmic benchmarking: parallel tempering, simulated-bifurcation method, semi-definite programming etc. against our methods.</li>
+        <li>High-performance computing: accelerate our methods via special-purpose hardware (e.g. GPUs).</li>
+    </ul>
+
+    <h4>Candidate requirements:</h4>
+    <ul>
+        <li>Strong grades in theoretical physics, in particular quantum mechanics.</li>
+        <li>Demonstrated programming experience in Julia or similar.</li>
+        <li>Some knowledge of quantum field theory is a plus.</li>
+        <li>Motivation to push a research topic independently.</li>
+        <li>The official first supervisor needs to come from the student's home university (RWTH Aachen, Uni Cologne or Uni Bonn).</li>
+    </ul>
+    
+    <h4 class="application-note">Applications should include CV, transcripts and, if possible, coding examples.</h4>
     </section>
 
     <section id="publications">
-      <h2>Publications</h2>
-      <ul>
-        <li>Thorge Müller, Ajainderpal Singh, Frank&nbsp;K. Wilhelm, and Tim Bode.
-        <span class="bibtex-protected">Limitations of Quantum Approximate Optimization in Solving Generic Higher-Order Constraint-Satisfaction Problems</span>.
-        2024.
-        <a href="https://arxiv.org/abs/2411.19388">arXiv:2411.19388</a>.</li>
-        <li>Tim Bode, Krish Ramesh, and Tobias Stollenwerk.
-        Quantum combinatorial optimization beyond the variational paradigm: simple schedules for hard problems.
-        2024.
-        <a href="https://arxiv.org/abs/2411.07646">arXiv:2411.07646</a>.</li>
-        <li>Tim Bode and Frank&nbsp;K. Wilhelm.
-        Adiabatic bottlenecks in quantum annealing and nonequilibrium dynamics of paramagnons.
-        <em>Phys. Rev. A</em>, 110:012611, Jul 2024.
-        <a href="https://doi.org/10.1103/PhysRevA.110.012611">doi:10.1103/PhysRevA.110.012611</a>.</li>
-        <li>Tim Bode, Michael Kajan, Francisco Meirinhos, and Johann Kroha.
-        Non-markovian dynamics of open quantum systems via auxiliary particles with exact operator constraint.
-        <em>Phys. Rev. Res.</em>, 6:013220, Feb 2024.
-        <a href="https://doi.org/10.1103/PhysRevResearch.6.013220">doi:10.1103/PhysRevResearch.6.013220</a>.</li>
-        <li>Kevin Lively, Tim Bode, Jochen Szangolies, Jian-Xin Zhu, and Benedikt Fauseweh.
-        Noise robust detection of quantum phase transitions.
-        <em>Phys. Rev. Res.</em>, 6:043254, Dec 2024.
-        <a href="https://doi.org/10.1103/PhysRevResearch.6.043254">doi:10.1103/PhysRevResearch.6.043254</a>.</li>
-        <li>Aditi Misra-Spieldenner, Tim Bode, Peter&nbsp;K. Schuhmacher, Tobias Stollenwerk, Dmitry Bagrets, and Frank&nbsp;K. Wilhelm.
-        <span class="bibtex-protected">Mean-Field Approximate Optimization Algorithm</span>.
-        <em>PRX Quantum</em>, 4:030335, Sep 2023.
-        <a href="https://doi.org/10.1103/PRXQuantum.4.030335">doi:10.1103/PRXQuantum.4.030335</a>.</li>
-        <li>Tim Bode, Dmitry Bagrets, Aditi Misra-Spieldenner, Tobias Stollenwerk, and Frank&nbsp;K. Wilhelm.
-        <span class="bibtex-protected">QAOA.jl: Toolkit for the Quantum and Mean-Field Approximate Optimization Algorithms</span>.
-        <em>Journal of Open Source Software</em>, 8(86):5364, 2023.
-        <a href="https://doi.org/10.21105/joss.05364">doi:10.21105/joss.05364</a>.</li>
-        <li>Francisco Meirinhos, Michael Kajan, Johann Kroha, and Tim Bode.
-        <span class="bibtex-protected">Adaptive numerical solution of Kadanoff-Baym equations</span>.
-        <em>SciPost Phys. Core</em>, 5:030, 2022.
-        <a href="https://doi.org/10.21468/SciPostPhysCore.5.2.030">doi:10.21468/SciPostPhysCore.5.2.030</a>.</li>
-        <li>Tim Bode.
-        The two-particle irreducible effective action for classical stochastic processes.
-        <em>Journal of Physics A: Mathematical and Theoretical</em>, 55(26):265401, jun 2022.
-        <a href="https://doi.org/10.1088/1751-8121/ac73c6">doi:10.1088/1751-8121/ac73c6</a>.</li>
-        <li>Fahri&nbsp;Emre Öztürk, Tim Lappe, Göran Hellmann, Julian Schmitt, Jan Klaers, Frank Vewinger, Johann Kroha, and Martin Weitz.
-        <span class="bibtex-protected">Observation of a non-Hermitian phase transition in an optical quantum gas</span>.
-        <em>Science</em>, 372(6537):88&ndash;91, 2021.
-        <a href="https://doi.org/10.1126/science.abe9869">doi:10.1126/science.abe9869</a>.</li>
-        <li><span class="bibtex-protected">Tim Lappe</span>.
-        <em><span class="bibtex-protected">Non-Markovian Dynamics of Open Bose-Einstein Condensates</span></em>.
-        PhD thesis, Rheinische Friedrich-Wilhelms-Universität Bonn, March 2021.
-        URL: <a href="https://hdl.handle.net/20.500.11811/8961">https://hdl.handle.net/20.500.11811/8961</a>.</li>
-        <li>Fahri&nbsp;Emre Ozturk, Tim Lappe, Göran Hellmann, Julian Schmitt, Jan Klaers, Frank Vewinger, Johann Kroha, and Martin Weitz.
-        <span class="bibtex-protected">Fluctuation dynamics of an open photon Bose-Einstein condensate</span>.
-        <em>Phys. Rev. A</em>, 100:043803, Oct 2019.
-        <a href="https://doi.org/10.1103/PhysRevA.100.043803">doi:10.1103/PhysRevA.100.043803</a>.</li>
-        <li>Tim Lappe, Anna Posazhennikova, and Johann Kroha.
-        <span class="bibtex-protected">Fluctuation damping of isolated, oscillating Bose-Einstein condensates</span>.
-        <em>Phys. Rev. A</em>, 98:023626, Aug 2018.
-        <a href="https://doi.org/10.1103/PhysRevA.98.023626">doi:10.1103/PhysRevA.98.023626</a>.</li>
-      </ul>      
+      <h2>List of Publications</h2>
+        <ul>
+          <li>Thorge Müller, Ajainderpal Singh, Frank&nbsp;K. Wilhelm, and Tim Bode.
+            Limitations of quantum approximate optimization in solving generic higher-order constraint-satisfaction problems.
+            <em>Phys. Rev. Res.</em>, 7:023165, May 2025.
+            <a href="https://doi.org/10.1103/PhysRevResearch.7.023165">doi:10.1103/PhysRevResearch.7.023165</a>.</li>
+            <li>Tim Bode, Krish Ramesh, and Tobias Stollenwerk.
+            Quantum combinatorial optimization beyond the variational paradigm: simple schedules for hard problems.
+            <em>Phys. Rev. A</em>, 111:032411, Mar 2025.
+            <a href="https://doi.org/10.1103/PhysRevA.111.032411">doi:10.1103/PhysRevA.111.032411</a>.</li>
+            <li>Dmitriy&nbsp;S. Shapiro, Yannik Weber, Tim Bode, Frank&nbsp;K. Wilhelm, and Dmitry Bagrets.
+            <span class="bibtex-protected">Quantum Simulation of the Dicke-Ising Model via Digital-Analog Algorithms</span>.
+            2024.
+            <a href="https://arxiv.org/abs/2412.14285">arXiv:2412.14285</a>.</li>
+            <li>Tim Bode and Frank&nbsp;K. Wilhelm.
+            Adiabatic bottlenecks in quantum annealing and nonequilibrium dynamics of paramagnons.
+            <em>Phys. Rev. A</em>, 110:012611, 2024.
+            <a href="https://doi.org/10.1103/PhysRevA.110.012611">doi:10.1103/PhysRevA.110.012611</a>.</li>
+            <li>Tim Bode, Michael Kajan, Francisco Meirinhos, and Johann Kroha.
+            Non-markovian dynamics of open quantum systems via auxiliary particles with exact operator constraint.
+            <em>Phys. Rev. Res.</em>, 6:013220, 2024.
+            <a href="https://doi.org/10.1103/PhysRevResearch.6.013220">doi:10.1103/PhysRevResearch.6.013220</a>.</li>
+            <li>Kevin Lively, Tim Bode, Jochen Szangolies, Jian-Xin Zhu, and Benedikt Fauseweh.
+            Noise robust detection of quantum phase transitions.
+            <em>Phys. Rev. Res.</em>, 6:043254, 2024.
+            <a href="https://doi.org/10.1103/PhysRevResearch.6.043254">doi:10.1103/PhysRevResearch.6.043254</a>.</li>
+            <li>Aditi Misra-Spieldenner, Tim Bode, Peter&nbsp;K. Schuhmacher, Tobias Stollenwerk, Dmitry Bagrets, and Frank&nbsp;K. Wilhelm.
+            <span class="bibtex-protected">Mean-Field Approximate Optimization Algorithm</span>.
+            <em>PRX Quantum</em>, 4:030335, 2023.
+            <a href="https://doi.org/10.1103/PRXQuantum.4.030335">doi:10.1103/PRXQuantum.4.030335</a>.</li>
+            <li>Tim Bode, Dmitry Bagrets, Aditi Misra-Spieldenner, Tobias Stollenwerk, and Frank&nbsp;K. Wilhelm.
+            <span class="bibtex-protected">QAOA.jl: Toolkit for the Quantum and Mean-Field Approximate Optimization Algorithms</span>.
+            <em>Journal of Open Source Software</em>, 8(86):5364, 2023.
+            <a href="https://doi.org/10.21105/joss.05364">doi:10.21105/joss.05364</a>.</li>
+            <li>Francisco Meirinhos, Michael Kajan, Johann Kroha, and Tim Bode.
+            <span class="bibtex-protected">Adaptive numerical solution of Kadanoff-Baym equations</span>.
+            <em>SciPost Phys. Core</em>, 5:030, 2022.
+            <a href="https://doi.org/10.21468/SciPostPhysCore.5.2.030">doi:10.21468/SciPostPhysCore.5.2.030</a>.</li>
+            <li>Tim Bode.
+            The two-particle irreducible effective action for classical stochastic processes.
+            <em>Journal of Physics A: Mathematical and Theoretical</em>, 55(26):265401, 2022.
+            <a href="https://doi.org/10.1088/1751-8121/ac73c6">doi:10.1088/1751-8121/ac73c6</a>.</li>
+            <li>Fahri&nbsp;Emre Öztürk, Tim Lappe, Göran Hellmann, Julian Schmitt, Jan Klaers, Frank Vewinger, Johann Kroha, and Martin Weitz.
+            <span class="bibtex-protected">Observation of a non-Hermitian phase transition in an optical quantum gas</span>.
+            <em>Science</em>, 372(6537):88&ndash;91, 2021.
+            <a href="https://doi.org/10.1126/science.abe9869">doi:10.1126/science.abe9869</a>.</li>
+            <li><span class="bibtex-protected">Tim Lappe</span>.
+            <em><span class="bibtex-protected">Non-Markovian Dynamics of Open Bose-Einstein Condensates</span></em>.
+            PhD thesis, Rheinische Friedrich-Wilhelms-Universität Bonn, 2021.
+            URL: <a href="https://hdl.handle.net/20.500.11811/8961">https://hdl.handle.net/20.500.11811/8961</a>.</li>
+            <li>Fahri&nbsp;Emre Öztürk, Tim Lappe, Göran Hellmann, Julian Schmitt, Jan Klaers, Frank Vewinger, Johann Kroha, and Martin Weitz.
+            <span class="bibtex-protected">Fluctuation dynamics of an open photon Bose-Einstein condensate</span>.
+            <em>Phys. Rev. A</em>, 100:043803, 2019.
+            <a href="https://doi.org/10.1103/PhysRevA.100.043803">doi:10.1103/PhysRevA.100.043803</a>.</li>
+            <li>Tim Lappe, Anna Posazhennikova, and Johann Kroha.
+            <span class="bibtex-protected">Fluctuation damping of isolated, oscillating Bose-Einstein condensates</span>.
+            <em>Phys. Rev. A</em>, 98:023626, 2018.
+            <a href="https://doi.org/10.1103/PhysRevA.98.023626">doi:10.1103/PhysRevA.98.023626</a>.</li>
+        </ul>                  
     </section>
+
+    <section id="talks">
+      <h2>Talks</h2>
+      <ul>
+        <li>May 2025 - Deutsches Forschungszentrum für Künstliche Intelligenz (DFKI), Kaiserslautern, <em>Quantum (-Inspired) Optimization</em>. </li>
+        <li>April 2025 - German Aerospace Center (DLR), <em>Journal Club</em>. </li>
+        <li>April 2025 - William I. Fine Theoretical Physics Institute, University of Minnesota, <em>Quantum-Inspired Optimization: Lessons and Perspectives</em>. </li>
+        <li>March 2025 - NASA Ames, Mountain View, <em>Quantum Optimization and Simulation</em>. </li>
+        <li>March 2025 - DPG March Meeting, University of Bonn, <em>Quantum optimization beyond the variational paradigm</em>. </li>
+        <li>February 2025 - QOQMS Seminar, University of Strathclyde, <em>Quantum optimization beyond the variational paradigm</em>. </li>
+        <li>January 2025 - FZJ Workshop on Bridging Neuromorphic and Quantum Computing, Jülich, <em>Quantum-Inspired Optimization Algorithms</em>. </li>
+        <li>November 2024 - HQS Workshop on QC Applications Beyond the Variational Paradigm, Karlsruhe, <em>Quantum Simulation of Electron-Phonin Interactions in Circuit QED</em>. </li>
+        <li>August 2024 - FZJ Workshop on the QAOA, Jülich, <em>Mean-Field Approximate Optimization</em>. </li>
+        <li>April 2024 - International Network on Quantum Annealing (INQA), <em>Adiabatic Bottlenecks in Quantum Annealing and Nonequilibrium Dynamics of Paramagnons</em>. </li>
+        <li>Feb 2024 - Institute for Advanced Simulation (IAS-6), Jülich, <em>Mean-Field Combinatorial Optimization Algorithms</em>. </li>
+        <li>March 2022 - APS March Meeting, Chicago, <em>Adaptive Numerical Solution of Kadanoff-Baym Equations</em>. </li>
+        <li>June 2020 - Closing Workshop SFB/TR 185, Bonn, <em>Non-Markovian Dynamics of a Driven-Dissipative Photon Condensate</em>. </li>
+        <li>September 2018 - Intensive Week SFB/TR 185, Bonn, <em>Introduction to Quantum Field Theory</em>. </li>
+        <li>March 2018 - Technische Universität Kaiserslautern, Kaiserslautern, <em>Collapse and revival of
+          photon oscillations</em>. </li>
+      </ul>
+    </section>    
 
     <section id="contact">
       <h2>Contact</h2>
