add video link and update references

--- a/index.html
+++ b/index.html
@@ -48,15 +48,19 @@
             PRX Quantum, <strong>4</strong>, 030335 (2023).
           </li>
           <li>
-            <strong><a href="https://doi.org/10.1103/PhysRevA.111.032411">Quantum combinatorial optimization beyond the variational paradigm: simple schedules for hard problems.</a></strong><br>
+            <strong><a href="https://arxiv.org/abs/2507.10360">Beyond-mean-field fluctuations for the solution of constraint satisfaction problems</a></strong><br>
+            arXiv:2507.10360 (2025).
+          </li>          
+          <li>
+            <strong><a href="https://doi.org/10.1103/PhysRevA.111.032411">Quantum combinatorial optimization beyond the variational paradigm: simple schedules for hard problems</a></strong><br>
             Phys. Rev. A, <strong>111</strong>, 032411 (2025).
           </li>
           <li>
-            <strong><a href="https://doi.org/10.1103/PhysRevResearch.7.023165">Limitations of quantum approximate optimization in solving generic higher-order constraint-satisfaction problems.</a></strong><br>
+            <strong><a href="https://doi.org/10.1103/PhysRevResearch.7.023165">Limitations of quantum approximate optimization in solving generic higher-order constraint-satisfaction problems</a></strong><br>
             Phys. Rev. Res., <strong>7</strong>, 023165 (2025).
           </li>
           <li>
-            <strong><a href="https://doi.org/10.1103/PhysRevA.110.012611">Adiabatic bottlenecks in quantum annealing and nonequilibrium dynamics of paramagnons.</a></strong><br>
+            <strong><a href="https://doi.org/10.1103/PhysRevA.110.012611">Adiabatic bottlenecks in quantum annealing and nonequilibrium dynamics of paramagnons</a></strong><br>
             Phys. Rev. A, <strong>110</strong>, 012611 (2024).
           </li>
           <li>
@@ -64,6 +68,8 @@
             Journal of Open Source Software, <strong>8</strong>(86), 5364 (2023).
           </li>
         </ul>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jMXp0-RdCjM?si=BBlrbNX46HKxMSjI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </section>
 
@@ -79,7 +85,7 @@
         <li>January 2025 - FZJ Workshop on Bridging Neuromorphic and Quantum Computing, Jülich, <em>Quantum-Inspired Optimization Algorithms</em>. </li>
         <li>November 2024 - HQS Workshop on QC Applications Beyond the Variational Paradigm, Karlsruhe, <em>Quantum Simulation of Electron-Phonin Interactions in Circuit QED</em>. </li>
         <li>August 2024 - FZJ Workshop on the QAOA, Jülich, <em>Mean-Field Approximate Optimization</em>. </li>
-        <li>April 2024 - International Network on Quantum Annealing (INQA), <em>Adiabatic Bottlenecks in Quantum Annealing and Nonequilibrium Dynamics of Paramagnons</em>. </li>
+        <li>April 2024 - International Network on Quantum Annealing (INQA), <em>Adiabatic Bottlenecks in Quantum Annealing and Nonequilibrium Dynamics of Paramagnons</em> | <a href="https://youtu.be/jMXp0-RdCjM?si=zHvvu4tynH2sDxwu" class="youtube-link">YouTube</a>.</li>
         <li>Feb 2024 - Institute for Advanced Simulation (IAS-6), Jülich, <em>Mean-Field Combinatorial Optimization Algorithms</em>. </li>
         <li>March 2022 - APS March Meeting, Chicago, <em>Adaptive Numerical Solution of Kadanoff-Baym Equations</em>. </li>
         <li>June 2020 - Closing Workshop SFB/TR 185, Bonn, <em>Non-Markovian Dynamics of a Driven-Dissipative Photon Condensate</em>. </li>
