add second language

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="alternate" hreflang="de" href="de.html">
+  <link rel="alternate" hreflang="en" href="index.html">
 </head>
 <body>
 
@@ -22,6 +24,7 @@
         <li><a href="#highlighted-publications">Research</a></li>
         <li><a href="#talks">Talks</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="de.html" aria-label="Switch to German">DE</a></li>
       </ul>
     </nav>
   </header>
