update mobile navigation

--- a/de.html
+++ b/de.html
@@ -15,17 +15,12 @@
   <header>
     <nav>
       <a href="#home" class="quicopt-brand">Quicopt</a>
-      <button class="mobile-menu-button">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </button>
-      <ul class="nav-links">
-        <li><a href="#highlighted-publications">Forschung</a></li>
-        <li><a href="#talks">Vorträge</a></li>
-        <li><a href="#contact">Kontakt</a></li>
-        <li><a href="index.html" aria-label="Wechsel zu Englisch">EN</a></li>
-      </ul>
+      <div class="nav-links">
+        <a href="#highlighted-publications">Forschung</a>
+        <a href="#talks">Vorträge</a>
+        <a href="#contact">Kontakt</a>
+        <a href="index.html" aria-label="Wechsel zu Englisch" class="language-link">EN</a>
+      </div>
     </nav>
   </header>
 
