--- a/index.html
+++ b/index.html
@@ -15,17 +15,12 @@
   <header>
     <nav>
       <a href="#home" class="quicopt-brand">Quicopt</a>
-      <button class="mobile-menu-button">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </button>
-      <ul class="nav-links">
-        <li><a href="#highlighted-publications">Research</a></li>
-        <li><a href="#talks">Talks</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="de.html" aria-label="Switch to German">DE</a></li>
-      </ul>
+      <div class="nav-links">
+        <a href="#highlighted-publications">Research</a>
+        <a href="#talks">Talks</a>
+        <a href="#contact">Contact</a>
+        <a href="de.html" aria-label="Switch to German" class="language-link">DE</a>
+      </div>
     </nav>
   </header>
 
