--- a/de.html
+++ b/de.html
@@ -31,7 +31,7 @@
         <img class="processor-image" src="images/processor.png" alt="Quicopt">
         <div class="home-text">
           <h2>Willkommen auf unserer Projektwebsite!</h2>
-          <p><strong>Quicopt</strong> ("<em>Quick-opt</em>") ist Teil des <a href="https://www.helmholtz.de/transfer/innovations-und-foerderprogramme/helmholtz-enterprise/">Helmholtz Enterprise</a> <a href="https://www.helmholtz.de/en/transfer/helmholtz-association-transfer-instruments/helmholtz-enterprise/">Jahrgangs 2024</a>.</p>
+          <p><strong>Quicopt</strong> ("<em>Quick-opt</em>") ist Teil des <a href="https://www.helmholtz.de/en/transfer/helmholtz-association-transfer-instruments/helmholtz-enterprise/">Jahrgangs 2024</a> von <a href="https://www.helmholtz.de/transfer/innovations-und-foerderprogramme/helmholtz-enterprise/">Helmholtz Enterprise</a>.</p>
           <p>Wir entwickeln von der (Quanten‑) Physik inspirierte Optimierungssoftware, um diskrete und kontinuierliche Optimierungsprobleme effizient zu lösen. Unsere Technologie hilft Unternehmen dabei, bessere Entscheidungen zu treffen und Kosten zu senken.</p>
         </div>
       </div>
