--- a/de.html
+++ b/de.html
@@ -40,6 +40,17 @@
       </div>
     </section>
 
+    <section id="benchmark">
+      <h2>Benchmarks</h2>
+      <!-- <p class="application-note">Mit der Maus über die Grafik fahren, um Details zu sehen.</p> -->
+      <img
+        class="benchmark-swap"
+        src="images/quicopt_gurobi_de.png"
+        data-hover="images/quicopt_gurobi_hover_de.png"
+        alt="Benchmark-Vergleich"
+      >
+    </section>
+
     <section id="highlighted-publications">
       <div class="highlighted-publications">
         <h2>Forschung zum Thema aus dem PGI-12</h2>
@@ -73,6 +84,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/jMXp0-RdCjM?si=BBlrbNX46HKxMSjI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </section>
+
 
     <section id="talks">
       <h2>Vorträge</h2>
