--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
       </div>
     </section>
 
+    <section id="benchmark">
+      <h2>Benchmarks</h2>
+      <!-- <p class="application-note">Hover to reveal additional details.</p> -->
+      <img
+        class="benchmark-swap"
+        src="images/quicopt_gurobi_en.png"
+        data-hover="images/quicopt_gurobi_hover_en.png"
+        alt="Benchmark comparison"
+      >
+    </section>
+
+
     <section id="highlighted-publications">
       <div class="highlighted-publications">
         <h2>Related PGI-12 Research</h2>
@@ -73,6 +85,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/jMXp0-RdCjM?si=BBlrbNX46HKxMSjI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </section>
+
 
     <section id="talks">
       <h2>Talks</h2>
