--- a/index.html
+++ b/index.html
@@ -41,14 +41,24 @@
     </section>
 
     <section id="benchmark">
-      <h2>Benchmarks</h2>
-      <!-- <p class="application-note">Hover to reveal additional details.</p> -->
-      <img
-        class="benchmark-swap"
-        src="images/quicopt_gurobi_en.png"
-        data-hover="images/quicopt_gurobi_hover_en.png"
-        alt="Benchmark comparison"
-      >
+      <div class="benchmark-grid">
+        <div class="benchmark-image">
+          <img
+            class="benchmark-swap"
+            src="images/quicopt_gurobi_en.png"
+            data-hover="images/quicopt_gurobi_hover_en.png"
+            alt="Benchmark comparison"
+          >
+        </div>
+        <div class="benchmark-text">
+          <h2>Benchmarks</h2>
+          <p>
+            The exemplary results shown to the left are for the <a href="https://en.wikipedia.org/wiki/Maximal_independent_set">"Maximum Independent Set"</a> problems <code>R_500_005_1</code> and <code>R_1000_005_1</code> from the <a href="https://git.zib.de/qopt/qoblib-quantum-optimization-benchmarking-library">Quantum Optimization Benchmarking Library (QOBLIB)</a>. 
+            The runtimes for Quicopt and Gurobi are roughly comparable in both cases, even though Quicopt was executed on a laptop with fewer cores (check out the notebooks <a href="https://github.com/FZJ-PGI-12/QuicoptBenchmarks/blob/main/notebooks/max_independent_set/R_500_005_1.ipynb">here</a> and <a href="https://github.com/FZJ-PGI-12/QuicoptBenchmarks/blob/main/notebooks/max_independent_set/R_1000_005_1.ipynb">here</a>). 
+            For runtimes and technical details on the Gurobi results, see <a href="https://doi.org/10.48550/arXiv.2504.03832">arXiv:2504.03832</a>.
+          </p>
+        </div>
+      </div>
     </section>
 
 
