--- a/index.html
+++ b/index.html
@@ -121,21 +121,18 @@
 
     <section id="contact">
       <div class="contact-grid">
-        <img class="contact-avatar" src="images/avatar.jpg" alt="Profile photo">
-        <div class="contact-card">
-          <h2>Contact</h2>
+        <div class="contact-left">
+          <img class="contact-avatar" src="images/avatar.jpg" alt="Profile photo">
           <p><a href="https://www.fz-juelich.de/profile/bode_t">Tim Bode @ PGI-12</a></p>
-          <div class="profile-caption">
-            <a href="https://scholar.google.co.th/citations?user=8NLnrqAAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
-              <img src="images/Google_Scholar_logo.svg.png" alt="Google Scholar">
-            </a>
-            <a href="https://github.com/timbode" target="_blank" rel="noopener noreferrer">
-              <img src="images/github-mark.png" alt="GitHub">
-            </a>
+          <div class="contact-links">
             <a href="https://www.linkedin.com/in/tim-bode-808b54149/" target="_blank" rel="noopener noreferrer">
               <img src="images/In-Blue-128.png" alt="LinkedIn">
             </a>
           </div>
+        </div>
+        <div class="contact-card">
+          <h2>Contact</h2>
+          <p>Feel free to reach out for research collaborations or inquiries.</p>
         </div>
       </div>
     </section>
