--- a/de.html
+++ b/de.html
@@ -133,7 +133,7 @@
         </div>
         <div class="contact-card">
           <h2>Kontakt</h2>
-          <p>Gerne Kontakt aufnehmen für Forschungskollaborationen oder Anfragen.</p>
+          <p>Ihr Unternehmen hat Bedarf für schnelle und hochwertige Optimierung? Nehmen Sie Kontakt zu uns auf!</p>
           <form action="https://formspree.io/f/xandzjgo" method="POST" data-recaptcha-sitekey="6LfQdsorAAAAAPN38y4phskg6zx-UzddFOw_eILb">
             <label>Name
               <input type="text" name="name" required>
