--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
         <div class="contact-card">
           <h2>Contact</h2>
-          <p>Feel free to reach out for research collaborations or inquiries.</p>
+          <p>Ready to move your operations research to the next level? Get in touch.</p>
           <form action="https://formspree.io/f/xandzjgo" method="POST" data-recaptcha-sitekey="6LfQdsorAAAAAPN38y4phskg6zx-UzddFOw_eILb">
             <label>Name
               <input type="text" name="name" required>
