--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <!-- <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Lora:wght@400;700&display=swap" rel="stylesheet"> -->
   <link rel="alternate" hreflang="de" href="de.html">
   <link rel="alternate" hreflang="en" href="index.html">
+  <link rel="icon" href="images/web_icon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="images/web_icon.svg" type="image/svg+xml">
+  <meta name="theme-color" content="#2d5faa">
   <script src="https://www.google.com/recaptcha/api.js?render=6LfQdsorAAAAAPN38y4phskg6zx-UzddFOw_eILb" async defer></script>
 </head>
 <body>
