--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quicopt - Project Website</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://quicopt.github.io/">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -15,6 +16,20 @@
   <link rel="icon" href="images/web_icon.svg" type="image/svg+xml">
   <link rel="shortcut icon" href="images/web_icon.svg" type="image/svg+xml">
   <meta name="theme-color" content="#2d5faa">
+  <!-- Open Graph / WhatsApp / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Quicopt">
+  <meta property="og:title" content="Quicopt - Project Website">
+  <meta property="og:description" content="We develop optimization software inspired by (quantum) physics to efficiently solve discrete as well as continuous optimization problems.">
+  <meta property="og:url" content="https://quicopt.github.io/">
+  <meta property="og:image" content="https://quicopt.github.io/images/processor.png">
+  <meta property="og:image:alt" content="Quicopt processor illustration">
+  <meta property="og:locale" content="en">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Quicopt - Project Website">
+  <meta name="twitter:description" content="Optimization software inspired by (quantum) physics for better decisions and reduced costs.">
+  <meta name="twitter:image" content="https://quicopt.github.io/images/processor.png">
   <script src="https://www.google.com/recaptcha/api.js?render=6LfQdsorAAAAAPN38y4phskg6zx-UzddFOw_eILb" async defer></script>
 </head>
 <body>
