--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="contact-grid">
         <div class="contact-left">
           <img class="contact-avatar" src="images/avatar.jpg" alt="Profile photo">
-          <p><a href="https://www.fz-juelich.de/profile/bode_t">Tim Bode @ PGI-12</a></p>
+          <p><a href="https://www.fz-juelich.de/profile/bode_t">Dr. Tim Bode @ PGI-12</a></p>
           <div class="contact-links">
             <a href="https://www.linkedin.com/in/tim-bode-808b54149/" target="_blank" rel="noopener noreferrer">
               <img src="images/In-Blue-128.png" alt="LinkedIn">
